--- a/index.pug
+++ b/index.pug
@@ -19,6 +19,8 @@ html(lang="en")
   head
     meta(charset="UTF-8")
     title Pug demo
+    link(rel="stylesheet", href="node_modules/normalize.css/normalize.css")
+    link(rel="stylesheet", href="style.css")
   body
     header
       h1 Pug demo
